# inertia-monitoring-prototype

./: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
.github/workflows/: cd.yml
examples/: commitment-data.csv  system-data.csv
scripts/: Manifest.toml  Project.toml  append-data.py  inertia-demo.jl  rts-commitmentment-data.csv
src/: app.html  hooks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Area.svelte  InertiaPlot.svelte  Navbar.svelte  Table.svelte
src/routes/: __layout.svelte  index.svelte
